# swc-plugin-component-annotate

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  constants.rs  jsx_utils.rs  lib.rs  path_utils.rs
tests/: test.rs
tests/fixture/react_class_component/: input.jsx  output.jsx
tests/fixture/react_component_basic/: output.jsx
tests/fixture/react_fragments/: input.jsx  output.jsx
tests/fixture/react_function_decl/: input.jsx  output.jsx
tests/fixture/react_ignored_components/: input.jsx  output.jsx
tests/fixture/react_index_file/: input.jsx  output.jsx
tests/fixture/react_inline_styled_component/: input.jsx  output.jsx
tests/fixture/react_member_expressions/: input.jsx  output.jsx
tests/fixture/react_sentry_attrs/: input.jsx  output.jsx
tests/fixture/react_source_path/: input.jsx  output.jsx
