[package]
authors     = ["scttcper <scttcper@gmail.com>"]
description = "[SWC plugin] Automatically annotate React components with data attributes for component tracking"
edition     = "2021"
homepage    = "https://github.com/scttcper/swc-plugin-component-annotate"
keywords    = ["swc-plugin", "swc", "react", "jsx", "component", "tracking", "annotation"]
license     = "MIT"
name        = "swc-plugin-component-annotate"
readme      = "README.md"
repository  = "https://github.com/scttcper/swc-plugin-component-annotate"
version     = "1.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
swc_core = { version = "10.7.0", features = [
    "ecma_ast",
    "ecma_visit",
    "swc_plugin",
    "ecma_utils",
    "swc_atoms",
    "ecma_plugin_transform",
] }


[dev-dependencies]
swc_core = { version = "10.7.0", features = [
    "testing_transform",
    "ecma_parser",
] }
testing = "4.0.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "debuginfo"

[profile.dev]
incremental = true
debug = 1
