[package]
authors     = ["scttcper <scttcper@gmail.com>"]
description = "[SWC plugin] Automatically annotate React components with data attributes for component tracking"
edition     = "2021"
homepage    = "https://github.com/scttcper/swc-plugin-component-annotate"
keywords    = ["swc-plugin", "swc", "react", "jsx", "component", "tracking", "annotation"]
license     = "MIT"
name        = "swc-plugin-component-annotate"
readme      = "README.md"
repository  = "https://github.com/scttcper/swc-plugin-component-annotate"
version     = "1.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
rustc-hash = "2.1.1"
serde = { version = "1.0.217", features = ["derive"], default-features = false }
serde_json = { version = "1.0.134", default-features = false }
# Kept in line with rspack https://github.com/web-infra-dev/rspack/blob/main/Cargo.toml
swc_core = { version = "36.0.0", features = ["ecma_plugin_transform"] }


[dev-dependencies]
testing = "14.0.0"
swc_core = { version = "36.0.0", features = ["ecma_plugin_transform", "ecma_parser", "swc_ecma_transforms_testing"] }

[profile.release]
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Strip debug symbols
strip = "symbols"

[profile.dev]
incremental = true
debug = 1
